--- a/useradd2.yml
+++ b/useradd2.yml
@@ -3,6 +3,6 @@
 - hosts: CentOS
   tasks:
     - name: Add User
-      user: name={{ username by set_stats }}
+      user: name={{ username }}
       become: yes
 ##################################################
