--- a/useradd2.yml
+++ b/useradd2.yml
@@ -1,8 +1,11 @@
 ##################################################
 ---
 - hosts: CentOS
+  become: yes
   tasks:
     - name: Add User
-      user: name={{ username }}
-      become: yes
+      user: 
+        name: "{{ item.username }}"
+
+      with_items: "{{ useradd }}""
 ##################################################
