--- a/useradd2.yml
+++ b/useradd2.yml
@@ -7,5 +7,5 @@
       user: 
         name: "{{ item.username }}"
 
-      with_items: "{{ useradd }}""
+      with_items: "{{ users }}""
 ##################################################
