--- a/useradd2.yml
+++ b/useradd2.yml
@@ -4,8 +4,6 @@
   become: yes
   tasks:
     - name: Add User
-      user: 
-        name: "{{ item.username }}"
-
+      user: name= "{{ item.username }}" 
       with_items: "{{ users }}""
 ##################################################
