--- a/useradd2.yml
+++ b/useradd2.yml
@@ -3,7 +3,8 @@
 - hosts: CentOS
   tasks:
     - name: Add User
-      user: name= "{{ item.username }}" 
+      user:
+        name: "{{ item.username }}" 
       with_items: "{{ users }}""
   become: yes
 ##################################################
