--- a/useradd2.yml
+++ b/useradd2.yml
@@ -5,6 +5,6 @@
     - name: Add User
       user:
         name: "{{ item.username }}" 
-      with_items: ""{{ users }}""
+      with_items: "{{ users }}"
   become: yes
 ##################################################
