--- a/useradd.yml
+++ b/useradd.yml
@@ -1,10 +1,10 @@
 ##################################################
 ---
 - hosts: CentOS
-  vars:
-    - username: hoge
   tasks:
     - name: Add User
-      user: name={{ username }}
-      become: yes
+      user:
+        name: "{{ item.username }}" 
+      with_items: "{{ users }}"
+  become: yes
 ##################################################
